--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <div class="nav-container">
-        <h1 class="logo">THE Secret Shop</h1>
+        <h3 class="logo">The Secret Shop</h3>
         <a href="#"><span>HOME</span></a>
         <a href="#"><span>SEVICE</span></a>
         <a href="#"><span>SHOP</span></a>
-        <a href="#"><div class="filter-button">filter</div></a>
         <a href="#">
             <div class="categories">CATEGORIES 
                 <div class="V">
@@ -28,7 +27,13 @@
         </a>
     </div>
     <div class="design" ><img class="front-img" src="front-img.jpg" alt=""></div>
-    <div class="some-text"><h1>Our product can gain you benefits</h1></div>
-    
+    <div class="some-text"><h1>TEXT HERE</h1></div>
+    <footer>
+        <div class=" footer-container">
+            asdasd
+            <i class="fab fa-facebook-f"></i>
+        </div>
+    </footer>
+
 </body>
 </html>
