I put some changes in css and html

--- a/shop.html
+++ b/shop.html
@@ -9,9 +9,9 @@
 <body>
     <div class="nav-container">
         <h3 class="logo">The Secret Shop</h3>
-        <a href="#"><span>HOME</span></a>
+        <a href="index.html"><span>HOME</span></a>
         <a href="#"><span>SEVICE</span></a>
-        <a href="shop.html">SHOP</a>
+        <a href="#"><span>SHOP</span></a>
         <a href="#">
             <div class="categories">CATEGORIES
                 <div class="V">
@@ -20,21 +20,18 @@
                     <div class="categories-items"> <a href=""> Shorts </a></div>
                     <div class="categories-items"> <a href=""> Pants </a></div>
                     <div class="categories-items"> <a href=""> Underwear </a></div>
-
                 </div>
             </div>
         </a>
     </div>
-    <div class="container">
-        <div class="design" ><img class="front-img" src="front-img.jpg" alt=""></div>
-        <div class="title-text position"><h1>Title HERE</h1></div>
-        <div class="some-text">Text here</div>
-        <footer>
-            <div class=" footer-container">
-                asdasd
-                <i class="fab fa-facebook-f"></i>
-            </div>
-        </footer>
+    <div class="container">    
+        <div class="title-text">            
+            titel
+        </div>
+        <div class="image-product"><img id="produt-shirt-1" src="product shirt.png"> </div>
+        <div class="some-text">
+            asdasd
+        </div>
     </div>
     <script type="text/javascript" src="js.js" ></script>
 </body>
