--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript" src="js.js" ></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -28,11 +30,10 @@
         <div class="title-text">            
             titel
         </div>
-        <div class="image-product"><img id="produt-shirt-1" src="product shirt.png"> </div>
+        <div class="image-product"><img  src="product shirt.png" id="product-tsirt"> </div>
         <div class="some-text">
             asdasd
         </div>
     </div>
-    <script type="text/javascript" src="js.js" ></script>
 </body>
 </html>
